--- a/auth/manifests/configmap.yaml
+++ b/auth/manifests/configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: auth-configmap
 data:
-  MYSQL_HOST: host.minikube.internal
-  MYSQL_USER: auth_user
-  MYSQL_DB: auth
-  MYSQL_PORT: "3306"
+  POSTGRES_HOST: postgres
+  POSTGRES_USER: postgres
+  POSTGRES_DB: auth
+  POSTGRES_PORT: "5432"
