--- a/auth/manifests/secret.yaml
+++ b/auth/manifests/secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: auth-secret
 stringData:
-  MYSQL_PASSWORD: Aauth123
+  POSTGRES_PASSWORD: postgres
   JWT_SECRET: sarcasm
 type: Opaque
