--- a/gateway/manifests/configmap.yaml
+++ b/gateway/manifests/configmap.yaml
@@ -3,4 +3,10 @@ kind: ConfigMap
 metadata:
   name: gateway-configmap
 data:
-  AUTH_SVC_ADDRESS: "auth:5000"
+  AUTH_SVC_HOST: "auth"
+  AUTH_SVC_PORT: "5000"
+  MONGO_HOST: "mongo"
+  MONGO_PORT: "27017"
+  MONGO_VIDEODB: "video"
+  MONGO_AUDIOB: "audio"
+  RABBITMQ_HOST: "rabbitmq"
