--- a/gateway/manifests/secret.yaml
+++ b/gateway/manifests/secret.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: gateway-secret
-stringData:
-  NAME: value
 type: Opaque
+stringData:
+  NAME: "value"
