--- a/postgres/manifests/statefulset.yaml
+++ b/postgres/manifests/statefulset.yaml
@@ -3,15 +3,15 @@ kind: StatefulSet
 metadata:
   name: postgres
 spec:
-  serviceName: "postgres"
+  serviceName: postgres
   selector:
     matchLabels:
-      app: postgres # has to match .spec.template.metadata.labels
+      app: postgres
   replicas: 1
   template:
     metadata:
       labels:
-        app: postgres # has to match .spec.selector.matchLabels
+        app: postgres
     spec:
       terminationGracePeriodSeconds: 10
       containers:
