added config and change dockerfile

--- a/auth/manifests/secret.yaml
+++ b/auth/manifests/secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: auth-secret
 stringData:
   POSTGRES_PASSWORD: postgres
-  JWT_SECRET: sarcasm
+  JWT_SECRET: secret
 type: Opaque
