--- a/converter/Dockerfile
+++ b/converter/Dockerfile
@@ -2,12 +2,12 @@ FROM python:3.10-slim-bullseye
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends --no-install-suggests \
-  build-essential ffmpeg \
-  && pip install --no-cache-dir --upgrade pip
+  build-essential ffmpeg
 
 WORKDIR /app
 COPY ./requirements.txt /app
+RUN pip install --no-cache-dir --upgrade pip
 RUN pip install --no-cache-dir --requirement /app/requirements.txt
 COPY . /app
 
-CMD ["python3", "consumer.py"]
+CMD ["python3", "app.py"]
