--- a/emailer/manifests/configmap.yaml
+++ b/emailer/manifests/configmap.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: converter-configmap
+  name: emailer-configmap
 data:
   MONGO_HOST: "mongodb"
   MONGO_PORT: "27017"
   RABBITMQ_HOST: "rabbitmq"
   AUDIO_QUEUE: "audio"
-  VIDEO_QUEUE: "video"
-  SERVICE_NAME: "converter"
+  SERVICE_NAME: "emailer"
