--- a/emailer/manifests/secret.yaml
+++ b/emailer/manifests/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: converter-secret
+  name: emailer-secret
 stringData:
   Name: "value"
 type: Opaque
