--- a/converter/manifests/configmap.yaml
+++ b/converter/manifests/configmap.yaml
@@ -9,3 +9,5 @@ data:
   AUDIO_QUEUE: "audio"
   VIDEO_QUEUE: "video"
   SERVICE_NAME: "converter"
+  GATEWAY_HOST: "gateway"
+  GATEWAY_PORT: "8080"
