--- a/emailer/Dockerfile
+++ b/emailer/Dockerfile
@@ -5,9 +5,11 @@ RUN apt-get update \
   build-essential 
 
 WORKDIR /app
-COPY ./requirements.txt /app
+COPY src /app/
+
 RUN pip install --no-cache-dir --upgrade pip
-RUN pip install --no-cache-dir --requirement /app/requirements.txt
-COPY . /app
+RUN pip install --no-cache-dir -r requirements.txt
+
+RUN flask db init; exit 0; flask db migrate; exit 0; flask db upgrade; exit 0
 
 CMD ["python3", "app.py"]
