--- a/emailer/manifests/configmap.yaml
+++ b/emailer/manifests/configmap.yaml
@@ -8,3 +8,5 @@ data:
   RABBITMQ_HOST: "rabbitmq"
   AUDIO_QUEUE: "audio"
   SERVICE_NAME: "emailer"
+  GATEWAY_HOST: "gateway"
+  GATEWAY_PORT: "8080"
